assets/css/_home.css
/*
----------------
hm-product-sec-wrp
----------------
*/
.hm-product-sec-wrp {
    padding-top: 55px;
    padding-bottom: 85px;
}
.hm-product-head {
    padding-bottom: 70px;
}
.hm-product-head h5{
	margin: 0;
	color: #8D9E2F;
	text-align: center;
	line-height: 32px;
}
.hm-product-slider-wrp{
	position: relative;
}
.hm-new-product-slider,
.hm-product-slider{
	max-width: 1110px;
	width: 100%;
	margin: 0 auto;
}
.hm-new-product-slide-item,
.hm-product-slide-item{
	text-align: center;
}
.hm-product-item-title h6{
	margin: 0;
	line-height: 35px;
	color: #3B3B3B;
	text-align: center;
	margin-bottom: 2px;
	min-height: 70px;
}
.hm-product-item-title h6 a{
	display: inline-block;
	vertical-align: baseline;
	text-decoration: none;
	color: initial;
}
.hm-product-item-title h6 a:hover{
	color: #8D9E2F;
}
.hm-product-item-img {
    border-left: 1px solid #9D9D9D;
    padding-top: 25px;
    padding-bottom: 42px;
    min-height: 285px;
    position: relative;
}
.hm-product-item-img-overflow {
    position: absolute;
    max-width: 200px;
    width: 100%;
    margin: 0 auto;
    top: 50%;
    left: 50%;
    text-align: center;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}
.hm-new-product-slide-item:nth-child(1) .hm-product-item-img,
.hm-product-slide-item:nth-child(1) .hm-product-item-img{
	border-left: 1px solid #9D9D9D;
}
.slick-slide.slick-current .hm-product-item-img{
	border-left: 0;
}
.hm-product-item-img img{
	display: inline-block;
	vertical-align: baseline;
}
.hm-product-item-price {
    margin-top: -42px;
}
.hm-product-item-price strong{
	display:block;
	font-size: 26px;
	line-height: 28px;
	color: #3B3B3B;
	font-weight: 400;
	padding-bottom: 14px;
	font-family: 'Abril Fatface', cursive;
}
.hm-product-item-btn{
	padding-top: 20px;
}
.hm-product-item-btn button{
	border: 2px solid #8D9E2F;
	box-sizing: border-box;
	border-radius: 100px;
	font-weight: 500;
	font-size: 16px;
	line-height: 18px;
	color: #8D9E2F;
	max-width: 130px;
	width: 100%;
	height: 46px;
	background: transparent;
	transition: all 0.5s;
	-ms-transition: all 0.5s;
	-webkit-transition: all 0.5s;
	cursor: pointer;
}
.hm-product-item-btn button:last-child{
	max-width: 114px;
	width: 100%;
	margin-left: 10px;
}
.hm-product-item-btn button:hover{
	background: #8D9E2F;
	color: #fff;
}

/*
-----------------------------
 Main Slider Next Prev css
------------------------------
*/
.productNewSliderArrows .leftArrow,
.productsliderarrows .leftArrow{
	position: absolute;
	left:0;
	top: 50%;
	-ms-transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
	z-index: 5;
	background: url(../images/leftArrow.png);
	background-size: 42px 42px;
}
.productNewSliderArrows .rightArrow,
.productsliderarrows .rightArrow{
	position: absolute;
	right:0;
	top: 50%;
	-ms-transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
	z-index: 5;	
	background: url(../images/rightArrow.png);
	background-size: 42px 42px;
}
.productNewSliderArrows .leftArrow,
.productNewSliderArrows .rightArrow,
.productsliderarrows .leftArrow,
.productsliderarrows .rightArrow{
	display: block;
	height: 42px;
	width: 42px;
	cursor: pointer;
	color: #fd6406;
	text-align: center;
	font-size: 29px;
	line-height: 34px;
	border-radius: 50px;
	opacity: 1;
	-webkit-transition: all .25s ease;
	   -moz-transition: all .25s ease;
	    -ms-transition: all .25s ease;
	     -o-transition: all .25s ease;
	        transition: all .25s ease;
}
.productNewSliderArrows .rightArrow:hover,
.productNewSliderArrows .leftArrow:hover,
.productsliderarrows .rightArrow:hover,
.productsliderarrows .leftArrow:hover{
	color: #0e857b;
	border-color: #fd6406;
	-webkit-transition: all .25s ease;
	   -moz-transition: all .25s ease;
	    -ms-transition: all .25s ease;
	     -o-transition: all .25s ease;
	        transition: all .25s ease;
	opacity: .5;
}


.hm-bitmap-sec-wrp{
	background: url(../images/hm-bitmap-sec-bg.png);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center center;
	min-height: 530px;
	padding:50px 0;
	transition: all 0.5s;
	-ms-transition: all 0.5s;
	-webkit-transition: all 0.5s;
}
.hm-bitmap-sec-wrp:hover{
	opacity: 0.8;
}
.hm-bitmap-dsc-wrp{
	position: relative;
}
.hm-bitmap-lft-dsc{
	float: left;
	color: #fff;
	max-width: 450px;
	width: 100%;
	padding-top: 40px;
}
.hm-bitmap-lft-dsc h3{
	margin: 0;
	line-height: 64px;
	margin-bottom: 10px;
	color: #fff;
}
.hm-bitmap-dsc-btn a{
	position: absolute;
	right: 0;
	top: 0;
	background:url(../images/hm-bitmap-dsc-btn.png);
	background-repeat: no-repeat;
	background-size: 79px 77px;
	width: 79px;
	height: 77px;
}

/*
----------------------
 Responsive Css
----------------------
*/


@media(max-width: 1299px){

}

@media(max-width: 1199px){
	
}

@media(max-width: 991px){
	.hm-product-item-title h6{
		min-height: 50px;
	}
	.hm-product-item-title h6 br{
		display: none;
	}
	
}

@media(max-width: 767px){
	.hm-bitmap-sec-wrp{
		min-height: 450px;
	}
	.hm-bitmap-dsc-btn a {
	    background-size: 62px 60px;
	    width: 62px;
	    height: 60px;
	}
	.hm-product-item-img{
		border-left: none;
	}
	.hm-product-slide-item:nth-child(1) .hm-product-item-img{
		border-left: none;
	}
	.hm-product-sec-wrp {
	    padding-top: 40px;
	    padding-bottom: 60px;
	}
	.hm-product-head {
	    padding-bottom: 40px;
	}
	.hm-product-slide-item {
	    text-align: center;
	    max-width: 400px;
	    margin: 0 auto !important;
	    display: table !important;
	}
}

@media(max-width: 575px){
	

}

@media(max-width: 479px){
	.hm-bitmap-dsc-btn a {
	    background-size: 52px 50px;
	    width: 52px;
	    height: 50px;
	    top: -20px;
	}
	.hm-bitmap-lft-dsc {
	    max-width: 300px;
	    width: 100%;
	    padding-top: 30px;
	}

}

@media(max-width: 359px){

}

